finished inserting everyting from methodology into final file

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -183,3 +183,148 @@
 	title = {Customer Service Chatbots: A Qualitative Interview Study into Customers' Communication Journey},
 	year = {2020},
 }
+@article{Brandtzaeg2018,
+	author = {Petter Bae Brandtzaeg and Asbjørn Følstad},
+	doi = {10.1145/3236669},
+	issn = {15583449},
+	issue = {5},
+	journal = {Interactions},
+	month = {9},
+	pages = {38-43},
+	publisher = {Association for Computing Machinery},
+	title = {Chatbots: User changing needs and motivations},
+	volume = {25},
+	year = {2018},
+}
+@article{Adam2021,
+	abstract = {Communicating with customers through live chat interfaces has become an increasingly popular means to provide real-time customer service in many e-commerce settings. Today, human chat service agents are frequently replaced by conversational software agents or chatbots, which are systems designed to communicate with human users by means of natural language often based on artificial intelligence (AI). Though cost- and time-saving opportunities triggered a widespread implementation of AI-based chatbots, they still frequently fail to meet customer expectations, potentially resulting in users being less inclined to comply with requests made by the chatbot. Drawing on social response and commitment-consistency theory, we empirically examine through a randomized online experiment how verbal anthropomorphic design cues and the foot-in-the-door technique affect user request compliance. Our results demonstrate that both anthropomorphism as well as the need to stay consistent significantly increase the likelihood that users comply with a chatbot’s request for service feedback. Moreover, the results show that social presence mediates the effect of anthropomorphic design cues on user compliance.},
+	author = {Martin Adam and Michael Wessel and Alexander Benlian},
+	doi = {10.1007/s12525-020-00414-7},
+	issn = {14228890},
+	issue = {2},
+	journal = {Electronic Markets},
+	keywords = {Anthropomorphism,Artificial intelligence,Chatbot,Compliance,Customer service,Social presence},
+	month = {6},
+	pages = {427-445},
+	publisher = {Springer Science and Business Media Deutschland GmbH},
+	title = {AI-based chatbots in customer service and their effects on user compliance},
+	volume = {31},
+	year = {2021},
+}
+@article{Cheng2021,
+	abstract = {Purpose: Artificial intelligence (AI)-based chatbots have brought unprecedented business potential. This study aims to explore consumers' trust and response to a text-based chatbot in e-commerce, involving the moderating effects of task complexity and chatbot identity disclosure. Design/methodology/approach: A survey method with 299 useable responses was conducted in this research. This study adopted the ordinary least squares regression to test the hypotheses. Findings: First, the consumers' perception of both the empathy and friendliness of the chatbot positively impacts their trust in it. Second, task complexity negatively moderates the relationship between friendliness and consumers' trust. Third, disclosure of the text-based chatbot negatively moderates the relationship between empathy and consumers' trust, while it positively moderates the relationship between friendliness and consumers' trust. Fourth, consumers' trust in the chatbot increases their reliance on the chatbot and decreases their resistance to the chatbot in future interactions. Research limitations/implications: Adopting the stimulus–organism–response (SOR) framework, this study provides important insights on consumers' perception and response to the text-based chatbot. The findings of this research also make suggestions that can increase consumers' positive responses to text-based chatbots. Originality/value: Extant studies have investigated the effects of automated bots' attributes on consumers' perceptions. However, the boundary conditions of these effects are largely ignored. This research is one of the first attempts to provide a deep understanding of consumers' responses to a chatbot.},
+	author = {Xusen Cheng and Ying Bao and Alex Zarifis and Wankun Gong and Jian Mou},
+	doi = {10.1108/INTR-08-2020-0460},
+	issn = {10662243},
+	journal = {Internet Research},
+	keywords = {Consumers’ response,Identity disclosure,Task complexity,Text-based chatbot,Trust},
+	note = {<br/>},
+	publisher = {Emerald Group Holdings Ltd.},
+	title = {Exploring consumers' response to text-based chatbots in e-commerce: the moderating role of task complexity and chatbot disclosure},
+	year = {2021},
+}
+@inproceedings{Ischen2020,
+	abstract = {Chatbots are increasingly used in a commercial context to make product- or service-related recommendations. By doing so, they collect personal information of the user, similar to other online services. While privacy concerns in an online (website-) context are widely studied, research in the context of chatbot-interaction is lacking. This study investigates the extent to which chatbots with human-like cues influence perceptions of anthropomorphism (i.e., attribution of human-like characteristics), privacy concerns, and consequently, information disclosure, attitudes and recommendation adherence. Findings show that a human-like chatbot leads to more information disclosure, and recommendation adherence mediated by higher perceived anthropomorphism and subsequently, lower privacy concerns in comparison to a machine-like chatbot. This result does not hold in comparison to a website; human-like chatbot and website were perceived as equally high in anthropomorphism. The results show the importance of both mediating concepts in regards to attitudinal and behavioral outcomes when interacting with chatbots.},
+	author = {Carolin Ischen and Theo Araujo and Hilde Voorveld and Guda van Noort and Edith Smit},
+	doi = {10.1007/978-3-030-39540-7_3},
+	isbn = {9783030395391},
+	issn = {16113349},
+	journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+	keywords = {Anthropomorphism,Chatbots,Privacy concerns},
+	pages = {34-48},
+	publisher = {Springer},
+	title = {Privacy Concerns in Chatbot Interactions},
+	volume = {11970 LNCS},
+	year = {2020},
+}
+@article{Go2019,
+	abstract = {Chatbots are replacing human agents in a number of domains, from online tutoring to customer-service to even cognitive therapy. But, they are often machine-like in their interactions. What can we do to humanize chatbots? Should they necessarily be driven by human operators for them to be considered human? Or, will an anthropomorphic visual cue on the interface and/or a high-level of contingent message exchanges provide humanness to automated chatbots? We explored these questions with a 2 (anthropomorphic visual cues: high vs. low anthropomorphism) × 2 (message interactivity: high vs. low message interactivity) × 2 (identity cue: chat-bot vs. human) between-subjects experiment (N = 141) in which participants interacted with a chat agent on an e-commerce site about choosing a digital camera to purchase. Our findings show that a high level of message interactivity compensates for the impersonal nature of a chatbot that is low on anthropomorphic visual cues. Moreover, identifying the agent as human raises user expectations for interactivity. Theoretical as well as practical implications of these findings are discussed.},
+	author = {Eun Go and S. Shyam Sundar},
+	doi = {10.1016/j.chb.2019.01.020},
+	issn = {07475632},
+	journal = {Computers in Human Behavior},
+	keywords = {Anthropomorphic visual cue,Compensation effect,Expectancy violation effect,Identity cue,Message interactivity,Online chat agents},
+	month = {8},
+	pages = {304-316},
+	publisher = {Elsevier Ltd},
+	title = {Humanizing chatbots: The effects of visual, identity and conversational cues on humanness perceptions},
+	volume = {97},
+	year = {2019},
+}
+@article{Shyam2008,
+	author = {S Shyam Sundar},
+	doi = {10.1162/dmal.9780262562324.073},
+	pages = {73-100},
+	publisher = {The MIT Press},
+	title = {The MAIN Model: A Heuristic Approach to Understanding Technology Effects on Credibility},
+	year = {2008},
+}
+@article{KANO1984,
+	author = {Noriaki KANO and Nobuhiko SERAKU and Fumio TAKAHASHI and Shin-ichi TSUJI},
+	doi = {10.20684/quality.14.2_147},
+	issue = {2},
+	journal = {Journal of The Japanese Society for Quality Control},
+	pages = {147-156},
+	title = {Attractive Quality and Must-Be Quality},
+	volume = {14},
+	year = {1984},
+}
+@article{Gong2007,
+	abstract = {Computer-generated anthropomorphic characters are a growing type of communicator that is deployed in digital communication environments. An essential theoretical question is how people identify humanlike but clearly artificial, hence humanoid, entities in comparison to natural human ones. This identity categorization inquiry was approached under the framework of consistency and tested through examining inconsistency effects from mismatching categories. Study 1 (N = 80), incorporating a self-disclosure task, tested participants' responses to a talking-face agent, which varied in four combinations of human versus humanoid faces and voices. In line with the literature on inconsistency, the pairing of a human face with a humanoid voice or a humanoid face with a human voice led to longer processing time in making judgment of the agent and less trust than the pairing of a face and a voice from either the human or the humanoid category. Female users particularly showed negative attitudes toward inconsistently paired talking faces. Study 2 (N = 80), using a task that stressed comprehension demand, replicated the inconsistency effects on judging time and females' negative attitudes but not for comprehension-related outcomes. Voice clarity overshadowed the consistency concern for comprehension-related responses. The overall inconsistency effects suggest that people treat humanoid entities in a different category from natural human ones. © 2007 International Communication Association.},
+	author = {Li Gong and Clifford Nass},
+	doi = {10.1111/j.1468-2958.2007.00295.x},
+	issn = {03603989},
+	issue = {2},
+	journal = {Human Communication Research},
+	month = {4},
+	pages = {163-193},
+	title = {When a talking-face computer agent is half-human and half-humanoid: Human identity and consistency preference},
+	volume = {33},
+	year = {2007},
+}
+@article{Kim2012,
+	abstract = {In analyzing the human tendency to treat computers as social actors (CASA), researchers tend to rule out the anthropomorphism explanation because anthropomorphism is understood to be "a sincere, conscious belief" that computers are human and/or deserving of human attributions. But, does anthropomorphism have to be necessarily mindful? Could it not also be a mindless tendency, especially given that most of us have somewhat long associations with our computers and have built human-like bonds with them? We examined these questions empirically by investigating whether the user tendency to treat computers as human beings is conscious (mindful) or non-conscious (mindless). We manipulated two variables (presence/absence of human-like agent and the low/high interactivity) on a health website and experimentally investigated whether they serve as anthropomorphic cues to trigger mindful attributions of human-ness to the website or mindless evaluations of the site in human terms. We found evidence for mindless anthropomorphism, with implications for user judgments of credibility of information on the site. © 2011 Elsevier Ltd. All rights reserved.},
+	author = {Youjeong Kim and S. Shyam Sundar},
+	doi = {10.1016/j.chb.2011.09.006},
+	issn = {07475632},
+	issue = {1},
+	journal = {Computers in Human Behavior},
+	keywords = {Anthropomorphism,Human-like agent,Information credibility,Interactivity,Social presence},
+	month = {1},
+	pages = {241-250},
+	title = {Anthropomorphism of computers: Is it mindful or mindless?},
+	volume = {28},
+	year = {2012},
+}
+@article{Nowak2004,
+	abstract = {This project examined how information provided in virtual worlds influences social judgment. It specifically tested the influence of anthropomorphism and agency on the level of uncertainty and social judgment, using a between-subjects experimental design. Anthropomorphism had three levels; a high anthropomorphic image, a low anthropomorphic image and no image. Agency had two levels; whether the participants were told they were interacting with a human (avatar condition) or a computer (agent condition). The results showed that the virtual image influenced social judgment. The less anthropomorphic image was perceived to be more credible and likeable than no image, which was more credible and likeable than the anthropomorphic image. There were no discernable differences in social judgment between participants who were told they were interacting with a human as compared to those told they were interacting with a computer agent, consistent with findings from previous reports. Neither anthropomorphism nor agency influenced reported levels of uncertainty. Implications of these results for those designing and using virtual environments are discussed.},
+	author = {Kristine L Nowak},
+	doi = {10.1111/j.1083-6101.2004.tb00284.x},
+	issn = {1083-6101},
+	issue = {2},
+	journal = {Journal of Computer-Mediated Communication},
+	month = {1},
+	title = {The Influence of Anthropomorphism and Agency on Social Judgment in Virtual Environments},
+	volume = {9},
+	url = {https://doi.org/10.1111/j.1083-6101.2004.tb00284.x},
+	year = {2004},
+}
+@report{Sudweeks1998,
+	author = {Fay Sudweeks},
+	title = {Interactivity on the Nets},
+	url = {https://www.researchgate.net/publication/228587808},
+	year = {1998},
+}
+@report{Koda1996,
+	author = {Tomoko Koda and B A In},
+	title = {All Rights Reserved Signature of Author Proram in Media Arts and Sciences},
+	year = {1996},
+}
+@report{Wexelblat1998,
+	abstract = {A study was performed, comparing two identical systems, which were equipped with different interfaces. One was a conventional data interaction, written in "standard" terse neutral English. The other was an anthropomorphized, conversational style interface. Users performed a set of tasks and gave feedback on the effect and affect of the systems. Our hypotheses were (1) that the affective measures would be improved in the conversational situation but (2) the standard interface would score higher on effective measures. The first hypothesis was weakly supported by the results; however, there was no support for the second hypothesis.},
+	author = {Alan Wexelblat},
+	title = {Don't Make That Face: a report on anthropomorphizing an interface},
+	url = {www.aaai.org},
+	year = {1998},
+}
+
