--- a/Thesis/LaTeX/Layout/Titlepage.tex
+++ b/Thesis/LaTeX/Layout/Titlepage.tex
@@ -1,56 +1,56 @@
 \frontmatter
 \newgeometry{textwidth=540pt,textheight=780pt,top=20pt,left=20pt,right=20pt}
 \begin{titlepage}
-
-\begin{figure}[t]{%
-      \begin{overpic}[width=1\textwidth]{../LaTeX/Layout/Picture1.png}
-         \put(46,4){\color{white}\large{\textbf{FACULTY OF ECONOMICS AND BUSINESS}}}
-      \end{overpic}
-    }
-\end{figure}
-
-\vspace*{4.5cm}
-{\color{kuleuven1}{\Huge  A survey on the impact of customer service chatbots on e-commerce}}
-
-\vspace*{0.5cm}
-{\Large Type your subtitle here}
-
-\begin{figure}[b]
-  %\centering
-   \begin{minipage}[c]{0.4\textwidth}  {%
-      \begin{overpic}[width=0.9\textwidth]{../LaTeX/Layout/Picture2.png}
-         \put(70,45){\begin{minipage}[c]{1.80\textwidth}
-\begin{flushright}
-
-{\Large Rob De Putter, Mout Pessemier, Laurens Van Keymolen} \linebreak
-{r0836627, r0837708, r0662749} \linebreak
-
-\textbf{{\large Thesis submitted to obtain \linebreak
-the degree of  master in the Information Management}} \linebreak
-
-%!!!IMPORTANT!!!:
-%indicate the appropriate title of your master and major. Check the website https://feb.kuleuven.be/studentenportaal/contact/masterproef-leuven
-{\large Information Management}\linebreak
-\linebreak
-\textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
-\textbf{{\large Co-promoter:}} Prof.\ Dr.\ ... \linebreak
-\textbf{{\large Tutor:}} Prof.\ Dr.\ ... \linebreak
-
-%\linebreak
-
-\textbf{{\large Academic year:}} {\large 2021-2022}
-\linebreak
-\end{flushright}
-  \end{minipage}}
-      \end{overpic}
-    }
-  \end{minipage}
-
-
-\begin{picture}(540,0.2)
-\put(0,0){\colorbox{kuleuven1}{\makebox(540,0.2){}}}
-\end{picture}
-\end{figure}
-
+	
+	\begin{figure}[t]{%
+			\begin{overpic}[width=1\textwidth]{../LaTeX/Layout/Picture1.png}
+				\put(46,4){\color{white}\large{\textbf{FACULTY OF ECONOMICS AND BUSINESS}}}
+			\end{overpic}
+		}
+	\end{figure}
+	
+	\vspace*{4.5cm}
+	{\color{kuleuven1}{\Huge  A survey on the impact of customer service chatbots on e-commerce}}
+	
+	\vspace*{0.5cm}
+	{\Large Type your subtitle here}
+	
+	\begin{figure}[b]
+		%\centering
+		\begin{minipage}[c]{0.4\textwidth}  {%
+				\begin{overpic}[width=0.9\textwidth]{../LaTeX/Layout/Picture2.png}
+					\put(70,45){\begin{minipage}[c]{1.80\textwidth}
+							\begin{flushright}
+								
+								{\Large Rob De Putter, Mout Pessemier} \linebreak
+								{r0836627, r0837708} \linebreak
+								
+								\textbf{{\large Thesis submitted to obtain \linebreak
+										the degree of  master in the Information Management}} \linebreak
+								
+								%!!!IMPORTANT!!!:
+								%indicate the appropriate title of your master and major. Check the website https://feb.kuleuven.be/studentenportaal/contact/masterproef-leuven
+								{\large Information Management}\linebreak
+								\linebreak
+								\textbf{{\large Promoter:}}   Prof.\ Dr.\ Jan Vanthienen \linebreak
+								\textbf{{\large Co-promoter:}} Prof.\ Dr.\ ... \linebreak
+								\textbf{{\large Tutor:}} Prof.\ Dr.\ ... \linebreak
+								
+								%\linebreak
+								
+								\textbf{{\large Academic year:}} {\large 2021-2022}
+								\linebreak
+							\end{flushright}
+					\end{minipage}}
+				\end{overpic}
+			}
+		\end{minipage}
+		
+		
+		\begin{picture}(540,0.2)
+			\put(0,0){\colorbox{kuleuven1}{\makebox(540,0.2){}}}
+		\end{picture}
+	\end{figure}
+	
 \end{titlepage}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
