Added second part of literature study + bibliografie + acronym to masterproef

--- a/Thesis/LaTeX/bibliografie.bib
+++ b/Thesis/LaTeX/bibliografie.bib
@@ -327,4 +327,32 @@
 	url = {www.aaai.org},
 	year = {1998},
 }
-
+@inproceedings{Følstad2018,
+	abstract = {Chatbots are increasingly offered as an alternative source of customer service. For users to take up chatbots for this purpose, it is important that users trust chatbots to provide the required support. However, there is currently a lack in knowledge regarding the factors that affect users’ trust in chatbots. We present an interview study addressing this knowledge gap. Thirteen users of chatbots for customer service were interviewed regarding their experience with the chatbots and factors affecting their trust in these. Users’ trust in chatbots for customer service was found to be affected (a) by factors concerning the specific chatbot, specifically the quality of its interpretation of requests and advise, its human-likeness, its self-presentation, and its professional appearance, but also (b) by factors concerning the service context, specifically the brand of the chatbot host, the perceived security and privacy in the chatbot, as well as general risk perceptions concerning the topic of the request. Implications for the design and development of chatbots and directions for future work are suggested.},
+	author = {Asbjørn Følstad and Cecilie Bertinussen Nordheim and Cato Alexander Bjørkli},
+	doi = {10.1007/978-3-030-01437-7_16},
+	isbn = {9783030014360},
+	issn = {16113349},
+	journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+	keywords = {Chatbots,Customer service,Interview study,Trust},
+	pages = {194-208},
+	publisher = {Springer Verlag},
+	title = {What makes users trust a chatbot for customer service? An exploratory interview study},
+	volume = {11193 LNCS},
+	year = {2018},
+}
+@article{Nordheim2019,
+	abstract = {Chatbots are predicted to play a key role in customer service. Users' trust in such chatbots is critical for their uptake. However, there is a lack of knowledge concerning users' trust in chatbots. To bridge this knowledge gap, we present a questionnaire study (N = 154) that investigated factors of relevance for trust in customer service chatbots. The study included two parts: an explanatory investigation of the relative importance of factors known to predict trust from the general literature on interactive systems and an exploratory identification of other factors of particular relevance for trust in chatbots. The participants were recruited as part of their dialogue with one of four chatbots for customer service. Based on the findings, we propose an initial model of trust in chatbots for customer service, including chatbot-related factors (perceived expertise and responsiveness), environment-related factors (risk and brand perceptions) and user-related factors (propensity to trust technology). RESEARCH HIGHLIGHTS: We extend the current knowledge base on natural language interfaces by investigating factors affecting users' trust in chatbots for customer service. Chatbot-related factors, specifically perceived expertise and responsiveness, are found particularly important to users' trust in such chatbots, but also environment-related factors such as brand perception and user-related factors such as propensity to trust technology. On the basis of the findings, we propose an initial model of users' trust chatbots for customer service.},
+	author = {Cecilie Bertinussen Nordheim and Asbjørn Følstad and Cato Alexander Bjørkli},
+	doi = {10.1093/iwc/iwz022},
+	issn = {09535438},
+	issue = {3},
+	journal = {Interacting with Computers},
+	keywords = {HCI theory, concepts and models, trust,natural language interfaces,user studies},
+	month = {5},
+	pages = {317-335},
+	publisher = {Oxford University Press},
+	title = {An Initial Model of Trust in Chatbots for Customer Service - Findings from a Questionnaire Study},
+	volume = {31},
+	year = {2019},
+}
