--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -5,34 +5,31 @@
 \label{ch:literature-study}
 
 \section{What is a chatbot?}
-A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{nlu} , \acrfull{nlg} (\cite{Adamopoulou2020}), \acrfull{ai} and \acrfull{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is what is called \acrfull{hci} (\cite{Adamopoulou2020}).  \acrshort{hci} is most likely to become the most widely researched topic in the \acrshort{ai} community (\cite{Bansal2018}). Chatbots are used in a verity of sectors. Some examples are education, health and of course e-commerce.
+A chatbot is a computer software program which combines \acrfull{nlp}, \acrfull{nlu} , \acrfull{nlg} (\cite{Adamopoulou2020}), \acrfull{ai} and \acrfull{ml} algorithms to simulate a human-like behaviour. It can respond to questions and hold a conversation. This type of technology is what is called \acrfull{hci} (\cite{Adamopoulou2020}).  \acrshort{hci} is most likely to become the most widely researched topic in the \acrshort{ai} community (\cite{Bansal2018}). Chatbots are used in a verity of sectors. Some examples are education, health and of course e-commerce.\\
 \break
+The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” (Chatbot |Definition of chatbot in English by Lexico Dictionaries, 2019). [Add some more technical definitions]\\
 \break
-The definition given by the dictionary goes as follows: “A computer program designed to simulate conversation with human users, especially over the Internet” (Chatbot |Definition of chatbot in English by Lexico Dictionaries, 2019). [Add some more technical definitions]
-\break
-\break
-Multiple types chatbots exist, going from text based to voice based to a combination of both (\cite{Radziwil2021}). Below is a more detailed taxonomy about chatbots.
+Multiple types chatbots exist, going from text based to voice based to a combination of both (\cite{Radziwil2021}). Below is a more detailed taxonomy about chatbots.\\
 
 \subsection{Taxonomy of a chatbot}
-There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots (\cite{Adamopoulou2020}). In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.
+There are many variants of chatbots such as digital assistants, artificial conversation entities, interactive agents and smart bots (\cite{Adamopoulou2020}). In this research, the focus will be on the interactive agents, since most e-commerce chatbots are interactive agents.\\
 \break
-\break
-These chatbots can be further divided into different categories. Depending on which aspect you want to categorise, many options are available. Some of them are listed below.
+These chatbots can be further divided into different categories. Depending on which aspect you want to categorise, many options are available. Some of them are listed below.\\
 
 \subsubsection{Architecture}
-This categorisation is based on the way the chatbots are constructed, their internal architecture. Rule based chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and can’t handle new inputs. On the other hand, \acrshort{ai} based chatbots are chatbots that use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs (\cite{Maroengsit2019}).
+This categorisation is based on the way the chatbots are constructed, their internal architecture. Rule based chatbots use already developed or newly handcrafted algorithms as a decision maker to identify both knowledge and response. This model is fixed and can’t handle new inputs. On the other hand, \acrshort{ai} based chatbots are chatbots that use \acrlong{ml} algorithms to generate a response based on the data provided. They keep on learning and improving based on the previous learning models. This way they are better equipped to handle new inputs (\cite{Maroengsit2019}).\\
 
 \subsubsection{Domain}
-The domain category is based on how broad the domain is in which they are used. Domain specific chatbots focus on specific industries. They have knowledge of the industry they are deployed in. On the other hand, general domain chatbots are created to support conversations in open topics. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline (\cite{Maroengsit2019}).
+The domain category is based on how broad the domain is in which they are used. Domain specific chatbots focus on specific industries. They have knowledge of the industry they are deployed in. On the other hand, general domain chatbots are created to support conversations in open topics. They don’t support a specific domain. Instead, they are versatile and may be applied to any discipline (\cite{Maroengsit2019}).\\
 
 \subsubsection{Platform}
-Chatbots can be divided up based on the platform on which they are active. Social media chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. Web based chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. Standalone program chatbots are installed as a separate program on the device of the user (\cite{Maroengsit2019}).
+Chatbots can be divided up based on the platform on which they are active. Social media chatbots use platforms such as Facebook Messenger, Facebook WhatsApp or Telegram Messenger for their communication with the user. Web based chatbots are most common on websites of companies. There, they get their own chat box to serve clients that way. Standalone program chatbots are installed as a separate program on the device of the user (\cite{Maroengsit2019}).\\
 
 \subsubsection{Type}
-Goal-based chatbots have a set goal they want to get to. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. Knowledge-based chatbots are classified on the knowledge they possess. Service-based chatbots are divided on the services they provide to the customer. Response-generated based chatbots are classified based on what action it performs in response generation (\cite{Nuruzzaman2018}).
+Goal-based chatbots have a set goal they want to get to. For example, a set goal could be to sell a specific product to the customer. Once the product is sold, the chatbot has successfully reached its goal and thus fulfilled its purpose. Knowledge-based chatbots are classified on the knowledge they possess. Service-based chatbots are divided on the services they provide to the customer. Response-generated based chatbots are classified based on what action it performs in response generation (\cite{Nuruzzaman2018}).\\
 
 \subsubsection{Task}
-This categorisation results in task- and non-task-oriented chatbots. The latter is more question oriented and the first one more conversational (\cite{Nuruzzaman2018}).
+This categorisation results in task- and non-task-oriented chatbots. The latter is more question oriented and the first one more conversational (\cite{Nuruzzaman2018}).\\
 
 \subsubsection{Some example e-commerce chatbots}
 \begin{enumerate}
@@ -46,38 +43,80 @@ This categorisation results in task- and non-task-oriented chatbots. The latter 
 \section{Customers’ expectations of communication with a company}
 
 \section{User experiences with e-commerce chatbots}
+\subsection{How to interpret user experiences?}
+In the past, customers could only make complaints and queries through mail or through a form. From 2016, this changed with the rise of AI and the transition from online social networks to mobile messaging applications such as Messenger, WhatsApp, etc. Service providers tried to respond to this change by introducing chatbots for customer service (\cite{Brandtzaeg2018}).\\
+\break
+A chatbot for customer service must be tailor-made for the consumer. In the research performed by Brandtzaeg \& Følstad (\cite{Brandtzaeg2018}) it is mentioned that some companies push to introduce chatbots into their customer service, this then leads to a technological push. This push causes chatbots to become less qualitative and potentially lead to great frustrations for customers, therefore it is important that it contains the right features so that the consumer has a pleasant experience when coming into contact with the company. A pleasant experience in itself is difficult to measure, which is why this research will examine the various aspects of the user experience in this literature study.\\
+
+\subsection{User’s perceptions of a chatbot}
+\ul{Talking with a technology-based system}\\
+According to the study "\acrshort{ai}-based chatbots in customer service and their effects on user compliance" (\cite{Adam2021}), the interaction between the consumer/user and the system is fundamentally social. The consumer will still consider the chatbot as a social actor, even though it is already known that it cannot show emotions (\cite{Adam2021}). In this research it can thus be considered that the consumer will interact with a chatbot in the same way as a human (\cite{Cheng2021,Ischen2020}).\\
+\break
+The study "Humanizing chatbots: The effects of visual, identity and conversational cues on humanness perceptions" proves otherwise. If an agent is known in advance as a chatbot, the user will biasedly evaluate whether the chatbot is of sufficient quality to meet their general expectations of machines. If the agent is marked as human, the user will evaluate the quality of the agent based on previous human interactions (\cite{Go2019,Shyam2008}).\\
+\break
+\ul{Efficiency and effectiveness}\\
+The efficiency and effectiveness in performing a productive task is considered an important and crucial factor by consumers who are using a chatbot. The purpose of the chatbot is to make the user's life easier and more productive (\cite{Brandtzaeg2018}).\\
+\break
+\ul{Empathy}\\
+The study “Exploring consumers' response to text-based chatbots in e-commerce: the moderating role of task complexity and chatbot disclosure” (\cite{Cheng2021}) concludes that empathic factor of the chatbot is important for successful interactions. The empathic factor of a chatbot makes the user's perspective more appreciated, it also makes it more responsive to the specific needs of the consumer.\\
+\break
+\ul{Task complexity}\\
+The difficulty of a task given to the chatbot has a negative effect on consumer confidence. If the task is complex, the customer will have less confidence that the task will be completed successfully (\cite{Cheng2021}).\\
+\break
+\ul{Anthropomorphic visual cues}\\
+Does a chatbot with visibly human characteristics affect user satisfaction? It is a question that plays a crucial role when researching the right user models. Anthropomorphic visual cues or visibly human features can provide a certain "humanity factor" (\cite{Shyam2008}), which will make the consumer consider the chatbot more human and subsequently interact more socially (\cite{Go2019,Gong2007,Kim2012, Nowak2004}).\\
+\break
+The study of \cite{Go2019} shows that message interactivity contributes to compensating for low anthropomorphic visual cue, meaning that the interactivity of a chatbot is more important to users than the visual human characteristics (\cite{Go2019}).\\
+\break
+\ul{Message interactivity}\\
+Message interactivity in a conversation can be understood as the level of contingency in message exchange. In a conversation between two people, message interactivity means understanding another's message, as well as awareness of previous conversations, if these conditions are met, we can speak of an interactive and responsive conversation (\cite{Go2019,Sudweeks1998}).\\
+\break
+\ul{Homogeneity}\\
+If a user interacts with an agent who has the same characteristics as him/herself (homogeneity), then the user will view the agent as positive. Studies have found that an agent with human characteristics is considered "better" than an agent with less human characteristics (\cite{Go2019,Koda1996,Wexelblat1998}). 
 
 \section{What makes users trust a customer service chatbot?}
+Customer trust is a crucial factor in customer service, and it is important that the customer accepts the agent's feedback as qualitative information. If the customer were to question the communication with the company, this could potentially lead to the loss of potential purchases. Measuring customer trust in a chatbot has already been investigated by Følstad et al (\cite{Følstad2018}). The research provides insight into different aspects of consumer trust within customer service.\\
+
+\subsection{Interpretation of question}
+The fact that the chatbot may not be able to interpret the questions correctly is a possible threat to the qualitative handling of a problem/question. If the questions are misinterpreted, it is possible that the chatbot shares wrong information. According to past research, consumers are more sceptical about the feedback from a chatbot when asked a complex question (\cite{Følstad2018,Nordheim2019}).\\
+
+\subsection{Self-presentation}
+A chatbot that reveals its weaknesses and limits are considered more trustworthy by consumers. The consumer gets a better idea of what may be asked and how confidential the information may be (\cite{Følstad2018}).
+
+\subsection{Security and privacy}
+The consumer expects the chatbot to meet certain security levels, especially when the chatbot handles transactions that may contain personal data. The user assumes that the service provider is responsible when the chatbot fails to support transactions (\cite{Følstad2018, Nordheim2019}).\\
+\break
+Since the existence of \acrfull{gdpr}, users' views on giving up personal data to machines have changed, this transition is also noticeable in chatbots. Users of chatbots want to know what happens to their data and how it is stored, they expect as little personal data as possible to be stored (\cite{Følstad2018, Nordheim2019}). 
+
 
 \section{Key Attributes and components of a successful e-commerce chatbot}
-Previous research has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions.
+Previous research has pointed out which characteristics are the most important. These characteristics can be grouped into some key dimensions.\\
 
 \subsubsection{Functionality}
-The most important attributes are interpretation of requests, execution of the request, flexible interpretation, ability to maintain a discussion, activation and the number of services available (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+The most important attributes are interpretation of requests, execution of the request, flexible interpretation, ability to maintain a discussion, activation and the number of services available (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Trustworthiness}
-Trustworthiness handles about the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+Trustworthiness handles about the chatbot containing dependable information, containing a wide range of knowledge, the possibility of rating the chatbot, robustness to unexpected input and transparency (\cite{Muizzah2021, Verkeyn2018}).
 
 \subsubsection{Safety / Intrusion}
-This category is all about protection and the respect of privacy and making sure the user is safe from intrusion (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+This category is all about protection and the respect of privacy and making sure the user is safe from intrusion (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Efficiency}
-The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+The efficiency dimension specifies the ease of use, quick replies versus free text usage, availability, accessibility and the need for an account (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Graphical Appearance}
-Graphical Appearance is all about the design and feel of the user interface and the use of emojis and gifs in conversations (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+Graphical Appearance is all about the design and feel of the user interface and the use of emojis and gifs in conversations (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Humanity}
-The humanity dimension shows how humanlike the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+The humanity dimension shows how humanlike the chatbot is. The attributes are about how real the chatbot feels, if it creates and enjoyable interaction, if it can convey a personality and if it can read and respond to certain moods of the customer (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Empathy}
-Empathy is about personalised options and suggestions (\cite{Muizzah2021}; \cite{Verkeyn2018}). 
+Empathy is about personalised options and suggestions (\cite{Muizzah2021, Verkeyn2018}).\\
 
 \subsubsection{Responsiveness}
-Responsiveness specifies the productivity and how fast the chatbot responds (\cite{Muizzah2021}; \cite{Verkeyn2018}).
+Responsiveness specifies the productivity and how fast the chatbot responds (\cite{Muizzah2021, Verkeyn2018}).\\
 \break
-\break
-By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations (\cite{Radziwil2021}). Table 1 lists the plausible attributes that give the highest user satisfaction score (\cite{Muizzah2021}).
+By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. \acrshort{ahp} is a structured approach for navigating complex decision-making processes that involve both qualitative and quantitative considerations (\cite{Radziwil2021}). Table 1 lists the plausible attributes that give the highest user satisfaction score (\cite{Muizzah2021}).\\
 
 \begin{longtable}{|l|l|}
 	\hline
@@ -103,10 +142,9 @@ By putting these attributes through \acrfull{ahp}, 7 main dimensions are found. 
 	\label{tab:ChatbotAttributes}
 \end{longtable}
 
-These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html }  as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured (\cite{Muizzah2021}).
+These attributes can be brought under six quality assessment categories provided by the ISO 9126-1 quality model\footnote{https://www.iso.org/standard/22749.html }  as seen in \ref{tab:ChatbotAttributes}.  By doing so, the quality of any piece of software, including a chatbot, can be measured (\cite{Muizzah2021}).\\
 \break
-\break
-Depending on the goal you want to reach, the focus on the most important characteristics will shift (\cite{Radziwil2021}). Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot (\cite{Radziwil2021}). Both (\cite{Muizzah2021}) and (\cite{Radziwil2021}) confirm these results.
+Depending on the goal you want to reach, the focus on the most important characteristics will shift (\cite{Radziwil2021}). Overall, accessibility and efficiency come out to be the most important dimensions of a chatbot (\cite{Radziwil2021}). Both (\cite{Muizzah2021}) and (\cite{Radziwil2021}) confirm these results.\\
 
 \begin{longtable}{|c|c|}
 	\hline
